--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<s>好小子，17张牌你能秒我？{font-family:"宋体";color:#66CCFF}</s>
+<s>好小子，17张牌你能秒我？{font-family:"宋体";color:#40}</s>
 <p>   </p>
 <BIG>我是说，赏你两斤地瓜烧 </BIG>
